# wsi2brick

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yaml
src/wsi2brick/: __init__.py  converter.py  example.py
src/wsi2brick/brick_sets/: lego_1x1.json
tests/: converter_test.py  example_test.py
